[tool.poetry]
name = "provisioner_runtime"
version = "0.1.13"
description = "Provision Everything Anywhere"
authors = ["Zachi Nachshon <zachi.nachshon@gmail.com>"]

packages = [
    { include = "main.py", to = "provisioner_runtime"},
    { include = "src", to = "provisioner_runtime" },
    { include = "resources", to = "provisioner_runtime"},
]

# A list of patterns that will be included in the final package.
# If no format is specified, it will default to include both sdist and wheel
# i.e. { path = "tests", format = ["sdist", "wheel"] }
# include = [
    # { path = "path/to/file", format = ["sdist", "wheel"] },
# ]

[tool.poetry.scripts]
provisioner = "provisioner_runtime.main:main"

[tool.poetry.dependencies]
python = "^3.11"
provisioner-shared = "^0.1.13"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"