[tool.poetry]
name = "provisioner_features_lib"
version = "0.1.0"
description = "Python Features Library"
authors = ["Zachi Nachshon <zachi.nachshon@gmail.com>"]
exclude = [
    "**/*_test*", 
    "**/*_fake*", 
    "dist", 
    "htmlcov", 
    "poetry.lock", 
    "pytest", 
    "Makefile", 
    "runners", 
    ".gitignore",
    ".coverage",
    ".coveragerc",
    ".git-deps",
    ".pytest_cache"]

[tool.poetry.dependencies]
python = "^3.10"

# For production and PyPi publishing
# provisioner-runtime = "^0.1.2"

# For development or testing, uncomment the line below
# provisioner_runtime = { path = "../provisioner", develop = true }

# 
# DEV DEPENDENCIES AND THEIR CONFIGS ARE AUTO GENERATED USING:
#   make set-dev-deps
# 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"