# IMPORTANT !
# It is important to keep the shared dependencies as a standalone package, to avoid
# from shared source dependencies to get deleted upon uninstalling a pip package, 
# for example, when deleting a provisioner plugin will remove source dependencies 
# used by other plugins or the runtime itself.
# =================================================================================
[tool.poetry]
name = "provisioner_shared"
# Version should be in line with the runtime version
version = "0.1.16"
description = "Shared package used by the provisioner runtime and plugins"
authors = ["Zachi Nachshon <zachi.nachshon@gmail.com>"]

# Include relative directories using the poetry-mutiproject-plugin
packages = [
    { include = "components", to = "provisioner_shared" },
    { include = "framework", to = "provisioner_shared" },
    { include = "resources", to = "provisioner_shared" },
]

# Add components as dependencies
[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.8"
# typer = ">=0.6.1,<0.16.0"
loguru = ">=0.6,<0.8"
requests = "^2.28.1"
rich = ">=12.5.1,<14.0.0"
python3-nmap = "^1.5.4"
python-libnmap = "^0.7.3"
PyYAML = "^6.0"
inquirer = ">=2.10,<4.0"
python-hosts = "^1.0.3"
ansible = ">=7.3,<12.0"
ansible-runner = "^2.3.2"

# GitPython = "^3.1.18" # - GitPython provides object model access to your git repository (https://github.com/gitpython-developers/GitPython)
# Jinja2 = "^3.0.3"      - Templating engine (https://github.com/pallets/jinja)
# sh = "^1.14.2"         - Subprocess replacement for Python (https://github.com/amoffat/sh)
# backoff = "^1.10.0"    - Function decoration for backoff and retry (https://github.com/litl/backoff)
# tenacity = "^8.0.1"    - General-purpose retrying library (https://github.com/jd/tenacity)

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
